fixes github logo not showing properly

--- a/src/GaugeNavBar.css
+++ b/src/GaugeNavBar.css
@@ -2,3 +2,7 @@
     border-radius: 8px;
     background-color: #53afed;
 }
+
+.github-logo {
+    max-height: 40px;
+}
